on client joined

--- a/source/repos/ScreenShare/ScreenShare/ScreenShare.csproj
+++ b/source/repos/ScreenShare/ScreenShare/ScreenShare.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\SoftwareEngineering2024\Networking.csproj" />
+    <ProjectReference Include="..\..\..\..\..\SoftwareEngineering2024\Network\Network.csproj" />
   </ItemGroup>
 
 
