--- a/source/repos/ScreenShare/Screentest/Screentest.csproj
+++ b/source/repos/ScreenShare/Screentest/Screentest.csproj
@@ -18,7 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\..\..\SoftwareEngineering2024\Networking.csproj" />
+	  <ProjectReference Include="..\..\..\..\..\SoftwareEngineering2024\Network\Network.csproj" />
+	  <ProjectReference Include="..\ScreenShare\ScreenShare.csproj" />
 	</ItemGroup>
 
 
